# takhti

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  FUSION.md  PLAN.md  README.md  flake.nix  run-tty.sh
crates/moonshell/: Cargo.toml
crates/moonshell-render/: Cargo.toml
crates/moonshell-render/src/: draw.rs  element.rs  layout.rs  lib.rs  scene.rs
crates/moonshell-runtime/: Cargo.toml
crates/moonshell-runtime/src/: api.rs  element.rs  lib.rs  services_bridge.rs  window.rs
crates/moonshell-services/: Cargo.toml
crates/moonshell-services/src/: lib.rs  tray.rs
crates/moonshell-services/src/compositor/: hyprland.rs  mod.rs  niri.rs  sway.rs  tomoe.rs
crates/moonshell/examples/: simple_bar.rs
crates/moonshell/src/: main.rs  watcher.rs
crates/takhti/: Cargo.toml
crates/takhti/src/: coords.rs  cursor.rs  handlers.rs  input.rs  lua.rs  main.rs  render.rs  state.rs
crates/takhti/src/backend/: tty.rs  winit.rs
crates/takhti/src/ui/: config_error_notification.rs  exit_confirm_dialog.rs  mod.rs  (+2 more)
crates/tomoe/: Cargo.toml
crates/tomoe/src/: capture.rs  docgen.rs  handlers.rs  input.rs  layout.rs  lua.rs  main.rs  process.rs  screenshot.rs  shell.rs  state.rs
crates/xdg-desktop-portal-tomoe/src/: outputs.rs  pipewire_stream.rs
docs/: lua-api.md  moonshell-DESIGN.md  moonshell-PLAN.md
examples/: layer-blur.lua
resources/: init.lua  wm.lua  zoomer.lua
resources/examples/: extension-surface-init.lua  zoomer-init.lua
resources/meta/: tomoe.lua
resources/moonshell/: services.lua
resources/moonshell/widgets/: battery.lua  workspaces.lua
(+20 files in other folders)
